# corp-profile

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
docs/superpowers/plans/: 2026-03-10-data-independence-and-llm-enrichment.md  2026-03-13-research-command-and-config-redesign.md
docs/superpowers/specs/: 2026-03-10-data-independence-and-llm-enrichment-design.md  2026-03-13-research-command-and-config-redesign.md
examples/: totalenergies.json
src/corp_profile/: __init__.py  __main__.py  config.py  db.py  enrich.py  profile.py  prompts.py  research.py  search.py
src/corp_profile/llm/: __init__.py  bedrock.py  openai.py
tests/: conftest.py  test_config.py  test_demo.py  test_enrich.py  test_estimate_refinement.py  test_llm.py  test_profile_io.py  test_research.py  test_search.py  test_tool_loop.py
